--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
 	<meta charset="utf-8">
 	<title>Sea Battle</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="./style/reset.css">
+	<script type="text/javascript" src="script.js" defer=""></script>
 </head>
 <body>
-	<h1>Sea Battle</h1>
-	<script type="text/javascript" src="script.js"></script>
+	<div id="seaSattle">
+		<div id="menu">
+			<ul>
+				<li class="menuLi" onclick="start()">start</li>
+				<li class="menuLi">restart</li>
+			</ul>
+		</div>
+		<div id="user"></div>
+		<div id="comp"></div>
+	</div>
 </body>
 </html>
