--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<script type="text/javascript" src="script.js" defer=""></script>
 </head>
 <body>
+	<img id='src'>
 	<div id="seaSattle">
 		<div id="menu">
 			<ul>
