--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <head>
 	<meta charset="utf-8">
 	<title>Sea Battle</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="./style/style.css">
 	<link rel="stylesheet" type="text/css" href="./style/reset.css">
 	<script type="text/javascript" src="script.js" defer=""></script>
 </head>
 <body>
-	<img id='src'>
 	<div id="seaSattle">
 		<div id="menu">
 			<ul>
