--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 				<li class="menuLi">restart</li>
 			</ul>
 		</div>
-		<div id="user"></div>
-		<div id="comp"></div>
+		<div id="playerUser"></div>
+		<div id="playerComp"></div>
 	</div>
 </body>
 </html>
