--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<div id="menu">
 			<ul>
 				<li class="menuLi" onclick="start()">start</li>
-				<li class="menuLi">restart</li>
+				<li id="massenge"></li>
 			</ul>
 		</div>
 		<div id="playerUser"></div>
