--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 	<div id="seaSattle">
 		<div id="menu">
 			<ul>
-				<li class="menuLi" onclick="start()">start</li>
+				<li id="start" onclick="start()">start</li>
 				<li id="massenge"></li>
+				<li id="finish">finih</li>
 			</ul>
 		</div>
 		<div id="playerUser"></div>
